Nivel 1 parte 2 en progreso

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/"        
-        }
-    },
+        },
+        "files": [
+        "src/notas.php"
+    ]
+    },    
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"    
