--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "App\\": "src/"        
         },
         "files": [
-        "src/notas.php"
+        "src/NotaN1.php"
     ]
     },    
     "autoload-dev": {
